@@ -22,7 +22,6 @@ import io.ballerina.compiler.api.symbols.TypeSymbol;
 import io.ballerina.compiler.syntax.tree.AssignmentStatementNode;
 import io.ballerina.compiler.syntax.tree.ModuleMemberDeclarationNode;
 import io.ballerina.compiler.syntax.tree.Node;
-import io.ballerina.compiler.syntax.tree.ObjectFieldNode;
 import io.ballerina.compiler.syntax.tree.StatementNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
 import io.ballerina.tools.text.LineRange;
@@ -66,8 +65,8 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 SyntaxKind.FUNCTION_CALL, SyntaxKind.QUALIFIED_NAME_REFERENCE, SyntaxKind.INDEXED_EXPRESSION,
                 SyntaxKind.FIELD_ACCESS, SyntaxKind.METHOD_CALL, SyntaxKind.CHECK_EXPRESSION, SyntaxKind.LET_EXPRESSION,
                 SyntaxKind.MAPPING_CONSTRUCTOR, SyntaxKind.TYPEOF_EXPRESSION, SyntaxKind.UNARY_EXPRESSION,
-                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR, 
-                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION, 
+                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR,
+                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION,
                 SyntaxKind.EXPLICIT_NEW_EXPRESSION, SyntaxKind.ERROR_CONSTRUCTOR, SyntaxKind.QUERY_EXPRESSION);
     }
 
@@ -87,20 +86,18 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         // 7. a record field with default value
         // 8. a function call expression used in a start action
         // 9. a client declaration or a module client declaration
-        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent() 
+        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent()
                 && !(nodeKind == SyntaxKind.MAPPING_CONSTRUCTOR && parentKind == SyntaxKind.TABLE_CONSTRUCTOR)
-                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL) 
-                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL) 
-                && parentKind == SyntaxKind.CALL_STATEMENT) 
+                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL)
+                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL)
+                && parentKind == SyntaxKind.CALL_STATEMENT)
                 && parentKind != SyntaxKind.CONST_DECLARATION
-                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT 
+                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT
                 && ((AssignmentStatementNode) parentNode).varRef().equals(node))
                 && !(nodeKind == SyntaxKind.QUALIFIED_NAME_REFERENCE && parentKind == SyntaxKind.FUNCTION_CALL)
                 && parentKind != SyntaxKind.RECORD_FIELD_WITH_DEFAULT_VALUE
                 && parentKind != SyntaxKind.ENUM_MEMBER
                 && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.START_ACTION)
-                && parentKind != SyntaxKind.CLIENT_DECLARATION
-                && parentKind != SyntaxKind.MODULE_CLIENT_DECLARATION
                 && CodeActionNodeValidator.validate(context.nodeAtRange());
     }
 
@@ -110,12 +107,12 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
     @Override
     public List<CodeAction> getCodeActions(CodeActionContext context,
                                            RangeBasedPositionDetails posDetails) {
-        
+
         Node node = posDetails.matchedCodeActionNode();
         if (isNotExtractable(node, context)) {
             return Collections.emptyList();
         }
-        
+
         String varName = getLocalVarName(context);
         String value = node.toSourceCode().strip();
         LineRange replaceRange = node.lineRange();
@@ -128,17 +125,32 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         if (statementNode == null) {
             return Collections.emptyList();
         }
-        String paddingStr = StringUtils.repeat(" ", statementNode.lineRange().startLine().offset());
         String typeDescriptor = FunctionGenerator.getReturnTypeAsString(context, typeSymbol.get().signature());
+        if (statementNode.kind() == SyntaxKind.INVALID_EXPRESSION_STATEMENT) {
+            String variable = String.format("%s %s = %s", typeDescriptor, varName, value);
+            TextEdit edit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
+                    PositionUtil.toPosition(replaceRange.endLine())), variable);
+            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                    List.of(edit), context.fileUri(), CodeActionKind.RefactorExtract));
+        }
+        String paddingStr = StringUtils.repeat(" ", statementNode.lineRange().startLine().offset());
         String varDeclStr = String.format("%s %s = %s;%n%s", typeDescriptor, varName, value, paddingStr);
-        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(), 
+        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(),
                 statementNode.lineRange().startLine().offset());
         TextEdit varDeclEdit = new TextEdit(new Range(varDeclPos, varDeclPos), varDeclStr);
         TextEdit replaceEdit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
-                PositionUtil.toPosition(replaceRange.endLine())),  varName);
+                PositionUtil.toPosition(replaceRange.endLine())), varName);
 
-        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE, 
-                List.of(varDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract));
+        CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                List.of(varDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract);
+        CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_VARIABLE,
+                getRenamePosition(replaceEdit.getRange().getStart()));
+
+        return Collections.singletonList(codeAction);
+    }
+    
+    private Position getRenamePosition(Position position) {
+        return new Position(position.getLine() + 1, position.getCharacter());
     }
 
     @Override
@@ -149,8 +161,8 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
     private Node getStatementNode(Node node) {
         Node statementNode = node;
         while (statementNode != null && !(statementNode instanceof StatementNode)
-                && !(statementNode instanceof ModuleMemberDeclarationNode) 
-                && !(statementNode instanceof ObjectFieldNode)) {
+                && !(statementNode instanceof ModuleMemberDeclarationNode)
+                && statementNode.kind() != SyntaxKind.OBJECT_FIELD) {
             statementNode = statementNode.parent();
         }
         return statementNode;
@@ -162,23 +174,23 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .collect(Collectors.toSet());
-        
+
         return NameUtil.generateTypeName(VARIABLE_NAME_PREFIX, allNames);
     }
 
     // If the variables within the selected range have been initialized in the closest statement node (and outside
     // the highlighted range), the expression is not extractable.
     private boolean isNotExtractable(Node matchedNode, CodeActionContext context) {
-        List<Symbol> symbolsWithinRange = getVisibleSymbols(context, 
+        List<Symbol> symbolsWithinRange = getVisibleSymbols(context,
                 PositionUtil.toPosition(matchedNode.lineRange().endLine())).stream()
-                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER) 
+                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER)
                         && context.currentSemanticModel().get().references(symbol).stream()
-                        .anyMatch(location -> 
+                        .anyMatch(location ->
                                 PositionUtil.isWithinLineRange(location.lineRange(), matchedNode.lineRange())))
                 .filter(symbol -> symbol.getLocation().isPresent() && PositionUtil.isWithinLineRange(
                         symbol.getLocation().get().lineRange(), getStatementNode(matchedNode).lineRange()))
                 .collect(Collectors.toList());
-        
+
         if (symbolsWithinRange.size() == 0) {
             return false;
         }
